# takeoff-calculator

./: Cargo.toml  PRD.md  RULES.md  biome.json  features.md  index.js  lint-staged.config.js  package-template.wasi-browser.js  package-template.wasi.cjs  package.json  pnpm-lock.yaml  prd-improved.md  turbo.json
.changeset/: chilly-balloons-relate.md  curvy-beds-raise.md  dirty-buckets-build.md  fancy-signs-stay.md  fluffy-sites-add.md  jolly-icons-mix.md  perky-flowers-poke.md  plenty-results-open.md  quiet-yaks-poke.md  rare-falcons-brake.md  sharp-phones-fall.md  sweet-shrimps-smell.md  thick-planes-mix.md  upset-games-lead.md  wicked-times-itch.md  wise-things-happen.md  yellow-hotels-judge.md
RFCs/: RFC-001-Typed-Error-Handling.md  RFC-002-Scale-and-Units-Foundation.md  RFC-003-Conversion-and-Measurement-Kinds.md  RFC-004-Groups-and-Aggregates.md  RFC-005-Node-and-WASI-Bindings.md  RFC-006-Performance-Benchmark-Suite.md  RFC-007-Accuracy-Validation.md  RFC-008-Additional-Units.md  RFC-009-Centroid-Reposition.md  RFCS.md  implementation-prompt-RFC-001.md  implementation-prompt-RFC-002.md  implementation-prompt-RFC-003.md  implementation-prompt-RFC-004.md  implementation-prompt-RFC-005.md  implementation-prompt-RFC-006.md  implementation-prompt-RFC-007.md  implementation-prompt-RFC-008.md  implementation-prompt-template.md
crates/takeoff_core/: ACCURACY.md  Cargo.toml
crates/takeoff_core/src/: contour.rs  error.rs  group.rs  lib.rs  measurement.rs  scale.rs  unit.rs  utils.rs
crates/takeoff_core/test_data/: README.md  baseline.json
prev/: PRD.md
(+26 files in other folders)
