[package]
edition = "2021"
name = "napi-package-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.8.2", features = ["full"] }
napi-derive = { version = "3.5.1", features = ["type-def"] }
uom = { version = "0.37.0", default-features = false, features = [
    "autoconvert",
    "f64",
    "f32",
    "si",
    "serde",

] }
geo = { version = "0.31.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }


[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
