[package]
name = "takeoff_core"
version = "0.1.0"
edition = "2024"


[dependencies]
delaunator = "1.0"
napi = { workspace = true }
napi-derive = { workspace = true }
uom = { workspace = true }
geo = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = "1.0"
